<resources>
    <string name="app_name">Quick Control Panel</string>
    <string name="app_prefs">Quick Control Panel Settings</string>
    <string name="swipe_detector_enable_disable_cat">Enable/Disable</string>
    <string name="swipe_detector_prefs">Launch settings</string>
    <string name="swipe_detector_height_pref">Swipe detector height</string>
    <string name="swipe_detector_width_pref">Swipe detector width</string>
    <string name="swipe_detector_align_pref">Swipe detector alignment</string>
    <string name="swipe_detector_align_left">Left</string>
    <string name="swipe_detector_align_middle">Middle</string>
    <string name="swipe_detector_align_right">Right</string>
    <string name="swipe_detector_direction_left">Left</string>
    <string name="swipe_detector_direction_up">Up</string>
    <string name="swipe_detector_direction_right">Right</string>
    <string name="swipe_detector_direction_pref">Swipe detector direction</string>
    <string name="swipe_detector_service_enable">Enable service</string>
    <string name="swipe_detector_enable">Enable swipe detector</string>
    <string name="swipe_detector_load_on_boot">Start on boot</string>
    <string name="swipe_detector_vibrate">Enable vibration</string>
    <string name="swipe_detector_offset">Swipe detector offset</string>
    <string name="swipe_detector_position_cat">Swipe detector position</string>
    <string name="swipe_detector_misc_cat">Miscellaneous</string>
    <string name="swipe_detector_google_now_launch">Enable \"Google Now\" launch</string>
    <string name="lockscreen_enable_detector_on_lockscreen">Enable swipe detector on lockscreen</string>
    <string name="toggles_pref">Toggles section</string>
    <string name="toggles_toggles_enabled">Enable toggles</string>
    <string name="toggles_toggle_size">Toggle size</string>
    <string name="toggles_border_shape">Border shape</string>
    <string name="toggle_border_shape_none">No border</string>
    <string name="toggle_border_shape_circle">Circle</string>
    <string name="toggle_border_shape_square">Square</string>
    <string name="toggle_border_shape_rounded">Square with rounde corners</string>
    <string name="toggles_bg_shape">Background shape</string>
    <string name="colors_bg_color">Background color</string>
    <string name="toggle_bg_shape_circle">Circle</string>
    <string name="toggle_bg_shape_square">Square</string>
    <string name="toggle_bg_shape_rounded">Square with rounde corners</string>
    <string name="toggles_border_corner_radius">Border corner radius (if enabled)</string>
    <string name="toggles_bg_corner_radius">Background corner radius (if enabled)</string>
    <string name="toggles_border_width">Border width (if enabled)</string>
    <string name="toggles_distance">Distance between toggles</string>
    <string name="toggles_flashlight_type">Flashlight type</string>
    <string name="toggle_sound_modes_normal_vibrate_silent">Normal/Vibrate/Silent</string>
    <string name="toggle_sound_modes_normal_vibrate">Normal/Vibrate</string>
    <string name="toggle_sound_modes_normal_silent">Normal/Silent</string>
    <string name="toggle_sound_modes_vibrate_silent">Vibrate/Silent</string>
    <string name="toggles_sound_modes">Sound modes</string>
    <string name="toggle_flash_type_default">Default</string>
    <string name="toggle_flash_type_htc">HTC</string>
    <string name="toggle_flash_type_nosurfaceview">Disable SurfaceView</string>
    <string name="toggle_flash_type_camera2">Android 5.0 Camera</string>
    <string name="persistent_flash_active">Flashlight active</string>
    <string name="persistent_flash_active_tap">Tap to deactivate</string>
    <string name="airplane_mode_unavailable">Airplane mode control is unavailable for your version of Android. You can use Xposed module called \"Airplane Mode Helper\" to fix that.</string>
    <string name="admin_required">Required to use &#8220;Lock now&#8221; button.</string>
    <string name="toggle_data">Mobile data</string>
    <string name="toggle_wifi">Wi-Fi</string>
    <string name="toggle_bluetooth">Bluetooth</string>
    <string name="toggle_sound">Sound mode</string>
    <string name="colors_prefs">Colors</string>
    <string name="colors_idle_color">Idle toggle color</string>
    <string name="colors_active_color">Active toggle color</string>
    <string name="colors_pressed_color">Pressed toggle color</string>
    <string name="colors_panel_bg_color">Main background color</string>
    <string name="colors_panel_bg_color_2">Secondary background color</string>
    <string name="colors_section_bg_color">Section background color</string>
    <string name="colors_section_shadow_color">Section shadow color</string>
    <string name="colors_seekbar_cat">Seekbar</string>
    <string name="colors_seekbar_disable_color">Disable custom seekbar color</string>
    <string name="colors_seekbar_progress_color">Seekbar progress color</string>
    <string name="colors_seekbar_thumb_color">Seekbar thumb color</string>
    <string name="colors_seekbar_progress_thumb_same_color">Use same color for thumb and progress</string>
    <string name="colors_text_cat">Text</string>
    <string name="colors_text_color">Text color</string>
    <string name="colors_gradient_direction">Gradient direction</string>
    <string name="colors_buttons_cat">Buttons</string>
    <string name="colors_panel_background_cat">Panel background</string>
    <string name="colors_themes">Themes</string>
    <string name="colors_apply_black_theme">Apply black theme</string>
    <string name="colors_apply_white_theme">Apply white theme</string>
    <string name="colors_apply_material_theme">Apply Material theme</string>
    <string name="info_enable_disable_cat">Enable/Disable</string>
    <string name="info_panel_prefs">Information section</string>
    <string name="info_panel_enable">Enable information panel</string>
    <string name="info_date_format">Date format</string>
    <string name="info_appearance">Appearance</string>
    <string name="info_date_format_message">If type is numeric, then number of symbols is minimum number of digits is required. Shorter numbers are padded with zeros.\nFor example, if you enter yyyy, you will get 1001, if you enter yy, you will get 01. \nG - era designator\ny - current year, numeric\nM - current month, numeric\nMMM - current month, short form\nMMMM - current month, full form\nw - week in year, numeric\nW - week in month, numeric\nD - day in year, numeric\nd - day in month, numeric\nF - day of week in month, numeric\nE - day in week, short form\nEEEE - day in week, full form\nDefault value is: E, dd/MM</string>
    <string name="info_rearrange_cat">Rearrange</string>
    <string name="info_enable_disable_order">Enable/disable/order</string>
    <string name="info_text_size">Text size</string>
    <string name="music_section_prefs">Music section</string>
    <string name="music_enable_disable_cat">Enable/disable</string>
    <string name="music_panel_enabled">Enable music panel</string>
    <string name="music_metadata_cat">Metadata</string>
    <string name="music_metadata_enable_artist">Show artist name</string>
    <string name="music_metadata_enable_title">Show song title</string>
    <string name="music_metadata_enable_album">Show album name</string>
    <string name="music_playback_control_cat">Playback control</string>
    <string name="music_playback_enable_scrubber">Use position control</string>
    <string name="music_playback_enable_broadcast_start">Send commands to inactive player</string>
    <string name="music_appearance_cat">Appearance</string>
    <string name="music_buttons_size">Buttons size</string>
    <string name="shortcuts_prefs">Shortcuts section</string>
    <string name="panels_order_prefs">Panels order</string>
    <string name="general_prefs">General settings</string>
    <string name="general_panel_offset">Panels offset</string>
    <string name="general_panel_appearance_cat">Panels appearance</string>
    <string name="general_panel_panels_distance">Distance between panels</string>
    <string name="general_panel_span">Panel span</string>
    <string name="general_dim_amount">Background dim amount</string>
    <string name="general_external_icon_pack">Icon pack</string>
    <string name="general_debug_cat">Debug</string>
    <string name="general_debug_show_swipe_detector">Make swipe detector visible</string>
    <string name="general_crash_app">Force app crash</string>
    <string name="general_list_prefs">Preferences info</string>
    <string name="general_list_prefs_xml">Preferences info(XML)</string>
    <string name="general_save_prefs_xml">Save preferences to XML file</string>
    <string name="general_advanced_cat">Advanced settings</string>
    <string name="general_advanced_disable_acra">Disable auto crash reports</string>
    <string name="general_advanced_force_foreground_mode">Force service foreground mode</string>
    <string name="general_debug_warning">Warning!</string>
    <string name="general_debug_warning_summary">Those settings indicate that this app is still in testing stage. If you see them in final product, please contact the developer immediately.</string>
    <string name="about_prefs">About</string>
    <string name="about_app_version_cat">Version</string>
    <string name="about_app_version">Version</string>
    <string name="about_app_build">Build number</string>
    <string name="about_app_version_codename">Version name</string>
    <string name="about_feedback_cat">Feedback</string>
    <string name="about_feedback">Send feedback</string>
    <string name="about_legal_cat">Legal</string>
    <string name="about_open_source_licenses">Open Source licenses</string>
    <string name="backup_prefs">Backup</string>
    <string name="backup_create_backup">Create backup</string>
    <string name="backup_restore_cat">Restore</string>
    <string name="backup_restore_backup">Restore backup</string>
    <string name="backup_restore_name">Backup name</string>
    <string name="backup_restore_refresh">Refresh</string>
    <string name="backup_pick_name">Backup name</string>
    <string name="about_theme_kit_cat">Theme kit</string>
    <string name="about_theme_kit_download">Download theme kit</string>
    <string name="about_theme_pack_kit_link">Copy link to clipboard</string>
    <string name="music_metadata_text_size">Metadata text size</string>
    <string name="general_panel_span_landscape">Panel span(landscape)</string>
    <string name="general_use_same_layout_for_landscape">Use same layout for landscape</string>
    <string name="general_drag_handler_width">Drag handle width</string>
    <string name="general_close_on_span_touch">Close panel on empty space click</string>
    <string name="music_default_player">Default player</string>
    <string name="music_enable_artwork">Enable artwork</string>
    <string name="music_artwork_size">Artwork size</string>
    <string name="music_artwork_padding">Artwork padding</string>
    <string name="colors_seekbar_active_color">Use active color for seekbar icon</string>
    <string name="colors_seekbars_icon_color">Seekbar icon color</string>
    <string name="general_post_notification">Post test notification</string>
    <string name="general_post_notification_delay">Post test notification after 5s</string>
    <string name="notifications_enable_cat">Enable/Disable</string>
    <string name="notifications_filter_cat">Filter</string>
    <string name="notifications_ignore_apps">Ignore notifications from&#8230;</string>
    <string name="notifications_hide_foreground_notification">Hide Quick Control Panel foreground notification</string>
    <string name="notifications_ignore_ongoing">Ignore ongoing notifications</string>
    <string name="notifications_show_toast">Show new notification toast</string>
    <string name="notifications_misc">Miscellaneous</string>
    <string name="backup_backup_cat">Backup</string>
</resources>